--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "vite": "^4.4.2",
     "vitest": "^0.32.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@floating-ui/dom": "^1.5.3",
+    "firebase": "^10.4.0"
+  }
 }
