--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@skeletonlabs/tw-plugin": "^0.2.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
